##Text encoding: utf-8

2006-05-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystalview.cc:

2006-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed mozilla-config use (thanks to Pav Lucistnik).
	* programs/crystal/window.cc: made on_delete_event static.

2006-05-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.7.2).

2006-05-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: port to new LINGUAS framework.
	* po/LINGUAS: new file.
	* programs/crystal/gcrystal.schemas.in: removed obsolete TabPos.

2006-05-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/crystal/prefs.glade: removed obsolete MDI page.
	* programs/crystal/application.cc: Add OnQuit and remove several obsolete
	methods.
	* programs/crystal/application.h: ditto.
	* programs/crystal/globals.h: removed obsolete TabPos variable.
	* programs/crystal/main.cc: cleaned code.
	* programs/crystal/prefs.cc: removed obsolete MDI page.
	* programs/crystal/prefs.h: ditto.
	* programs/crystal/window.cc: fixed on_quit and implemetn on_view_settings.

2006-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add a value for PACKAGE_BUGREPORT.
	* programs/crystal/application.cc: rewrote gcApplication::OnFileClose
	* programs/crystal/document.cc: add gcDocument::RemoveAllViews.
	* programs/crystal/document.h: ditto.
	* programs/crystal/view.cc: removed the obsolete Lock stuff.
	* programs/crystal/view.h: ditto.
	* programs/crystal/window.cc: reorder the Help menu.

2006-05-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/application.cc: add a comment.
	* programs/crystal/document.cc: reimplement add/remove views.
	* programs/crystal/document.h: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/crystal/window.h: ditto.

2006-05-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: needs goffice >= 0.3.1.
	* programs/crystal/application.cc: reimplemented printing.